--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "testhost",
-    "short_name": "testhost",
+    "name": "ubayfood",
+    "short_name": "ubayfood",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
